--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
       z-index: 100;
     }
   </style>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyDdSrvpJ_VFgFSs_0JG9lOTPOSUZIi6sCk",
+    authDomain: "sambhav-site.firebaseapp.com",
+    projectId: "sambhav-site",
+    storageBucket: "sambhav-site.firebasestorage.app",
+    messagingSenderId: "634828634310",
+    appId: "1:634828634310:web:91b9e31e417b1fe22e7fc7"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 </head>
 
 <body>
@@ -233,5 +252,6 @@
         </div>
     </footer>
       <script src="gpt.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
